--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <!-- Navbari -->
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
@@ -200,28 +201,28 @@
         <div class="news-container">
           <div class="news-card">
             <div class="news-image-container">
-                            <a href="/News/gtaVI.html">
-
-              <img
-                src="Game_Images/gtaVI.png"
-                alt="Game Image"
-                class="game-card-image"
-                class="news-cover"
-              />
-              </a>  
+              <a href="/News/gtaVI.html">
+                <img
+                  src="Game_Images/gtaVI.png"
+                  alt="Game Image"
+                  class="game-card-image"
+                  class="news-cover"
+                />
+              </a>
             </div>
             <div class="news-info-container">
-              <p class="game-name">GTA 6: Everything we know so far
+              <p class="game-name">GTA 6: Everything we know so far</p>
+              <p class="game-description">
+                Your biggest Grand Theft Auto 6 questions answered on the GTA 6
+                leak, setting, location, characters, and more
               </p>
-              <p class="game-description">Your biggest Grand Theft Auto 6 questions answered on the GTA 6 leak, setting, location, characters, and more</p>
               <a href="/News/gtaVI.html">
                 <button class="read-more-btn">Read more</button>
-                </a>  
+              </a>
             </div>
           </div>
           <div class="news-card">
             <div class="news-image-container">
-
               <img
                 src="Game_Images/fortnite-cover.avif"
                 alt="Game Image"
@@ -237,9 +238,8 @@
                 promise the will bring more to this ...
               </p>
               <a href="/News/fortnite-no-build.html">
-
-              <button class="read-more-btn">Read more</button>
-              </a>  
+                <button class="read-more-btn">Read more</button>
+              </a>
             </div>
           </div>
         </div>
@@ -740,7 +740,12 @@
                   required
                   class="email-input"
                 />
-                <button type="submit" class="subscribe-button" form="my-form" onclick="alert('You succesfully subscribed to our newsletter')">
+                <button
+                  type="submit"
+                  class="subscribe-button"
+                  form="my-form"
+                  onclick="alert('You succesfully subscribed to our newsletter')"
+                >
                   Subscribe
                 </button>
               </div>
