--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="topnav" id="myTopnav">
           <img src="logo.png" alt="" class="navlogo" />
           <a href="index.html" class="active">Home</a>
-          <a href="#">News</a>
+          <a href="/News/news.html">News</a>
           <a href="#">Contact</a>
           <a href="#">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
