--- a/Authentication/login.html
+++ b/Authentication/login.html
@@ -6,8 +6,8 @@
     <title>Login</title>
     <link rel="stylesheet" href="./login.css" />
     <link rel="stylesheet" href="../global.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div class="container">
