--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="logo.png" alt="" class="navlogo" />
           <a href="index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
+          <a href="/ContactUs/contactUs.html">Contact</a>
           <a href="#">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="menu.svg" class="menu-icon" /></i>
