All games added

--- a/Games/alan-awake-2.html
+++ b/Games/alan-awake-2.html
@@ -7,20 +7,19 @@
     <title>Alan Awake 2</title>
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="game.css" />
-        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-        <script src="../navbar.js"></script>
-
+    <script src="../navbar.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
+          <a href="../About/Contact.html">Contact</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -30,7 +29,7 @@
     <div class="main-container game-container">
       <div class="left-half">
         <img
-          src="../Game_Images/rocket.avif"
+          src="../Game_Images/alan-awake-2.avif"
           class="game-cover"
           alt="game-cover"
         />
@@ -38,62 +37,86 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">Alan Awake 2</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
+          <span class="game-creator">Remedy Entertainment</span>
+          <span class="game-platform"
+            ><img src="windows-10-icon.svg" alt="" class="platform-icon" /><img
+              src="playstation.png"
+              class="platform-icon"
+          /></span>
 
-          <span class="game-rating">Rating</span>
+          <span class="game-rating">2.5 / 5</span>
         </div>
         <div class="game-info-bottom">
           <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
-          <div class="button-container">
+
+          <span class="game-price-sale">49.99$</span>
+         <a href="../Authentication/login.html"> <div class="button-container">
             <button class="cart-btn">Add to cart</button>
             <button class="buy-btn">
               <img src="/bag.svg" alt="" class="bag-img" />
             </button>
-          </div>
+          </div></a>
         </div>
       </div>
     </div>
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          Alan Wake 2 is nominated for GAME OF THE YEAR at The Game Awards
           <br />
-          PLAY ROCKET LEAGUE FOR FREE!
           <br />
-          Download and compete in the high-octane hybrid of arcade-style soccer
-          and vehicular mayhem! customize your car, hit the field, and compete
-          in one of the most critically acclaimed sports games of all time!
-          Download and take your shot! <br /><br />
-          Hit the field by yourself or with friends in 1v1, 2v2, and 3v3 Online
-          Modes, or enjoy Extra Modes like Rumble, Snow Day, or Hoops. Unlock
-          items in Rocket Pass, climb the Competitive Ranks, compete in
-          Competitive Tournaments, complete Challenges, enjoy cross-platform
-          progression and more! The field is waiting. Take your shot!
+          A string of ritualistic murders threatens Bright Falls, a small-town
+          community surrounded by Pacific Northwest wilderness. Saga Anderson,
+          an accomplished FBI agent with a reputation for solving impossible
+          cases arrives to investigate the murders. Andersonï¿½s case spirals into
+          a nightmare when she discovers pages of a horror story that starts to
+          come true around her.<br /><br />
+          Alan Wake, a lost writer trapped in a nightmare beyond our world,
+          writes a dark story in an attempt to shape the reality around him and
+          escape his prison. With a dark horror hunting him, Wake is trying to
+          retain his sanity and beat the devil at his own game. Anderson and
+          Wake are two heroes on two desperate journeys in two separate
+          realities, connected at heart in ways neither of them can understand:
+          reflecting each other, echoing each other, and affecting the worlds
+          around them. Fueled by the horror story, supernatural darkness invades
+          Bright Falls, corrupting the locals and threatening the loved ones of
+          both Anderson and Wake. Light is their weaponï¿½and their safe haven ï¿½
+          against the darkness they face. Trapped in a sinister horror story
+          where there are only victims and monsters, can they break out to be
+          the heroes they need to be? <br /><br />
+
+          Solve a Deadly Mystery
           <br /><br />
-          New Challenges <br /><br />
-          Complete Weekly and season-long Challenges to unlock customization
-          items for free! <br /><br />
-          Tournaments <br /><br />
-          Feel the competitive energy! Join free Tournaments and compete all
-          season against teams at your Rank! Win and earn new rewards!
+          What begins as a small-town murder investigation rapidly spirals into
+          a nightmare journey. Uncover the source of the supernatural darkness
+          in this psychological horror story filled with intense suspense and
+          unexpected twists.<br /><br />
+          Play As Two Characters
           <br /><br />
-          In-Game Events and Limited Time Modes <br /><br />
-          From Haunted Hallows to Frosty Fest, enjoy limited time events that
-          feature festive in-game items that can be unlocked by playing online!
-          Keep on the lookout for Limited Time Modes and arenas. <br /><br />
-          Cross-Platform Progression <br /><br />
-          Share your Rocket League Inventory, Competitive Rank, and Rocket Pass
-          Tier on any connected platform! <br /><br />
-          Item Shop & Blueprints <br /><br />
-          Make your car your own with nearly endless customization
-          possibilities! Get in-game items for completing challenges, browse the
-          Item Shop, or build Blueprints for premium content for your car.
+          Experience both Alan Wakeï¿½s and Saga Andersonï¿½s stories and see events
+          unfold from different perspectives. Switch between Andersonï¿½s
+          life-or-death race to solve the case and Wakeï¿½s desperate attempts to
+          rewrite his reality to escape the depths of the Dark Place
+          <br /><br />
+          Explore Two Worlds
+          <br /><br />
+          Experience two beautiful yet terrifying worlds, each with its own rich
+          cast of characters and deadly threats. Discover majestic landscapes of
+          Cauldron Lake in the Pacific Northwest and the idyllic towns of Bright
+          Falls and Watery. Contrasting sharply, attempt to escape the
+          nightmarish cityscape of the Dark Place.<br /><br />
+          Survive With Light
+          <br /><br />
+          With limited resources, take on powerful supernatural enemies in
+          desperate close-combat situations. It takes more than just a gun to
+          survive: light is the ultimate weapon in the fight against the
+          darkness and will be your refuge when enemies threaten to overwhelm
+          you.
+          <br /><br />
         </p>
       </div>
     </div>
-       <div class="footer-color">
+    <div class="footer-color">
       <div class="main-container">
         <footer>
           <div>
@@ -140,4 +163,5 @@
     </div>
   </body>
 </html>
+
 
