--- a/Games/dota-2.html
+++ b/Games/dota-2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,20 +6,19 @@
     <title>Dota 2</title>
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="game.css" />
-        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-        <script src="../navbar.js"></script>
-
+    <script src="../navbar.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
+          <a href="../About/Contact.html">Contact</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -30,7 +28,7 @@
     <div class="main-container game-container">
       <div class="left-half">
         <img
-          src="../Game_Images/rocket.avif"
+          src="../Game_Images/dota-2.jpeg"
           class="game-cover"
           alt="game-cover"
         />
@@ -38,62 +36,62 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">Dota 2</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
+          <span class="game-creator">Valve</span>
+          <span class="game-platform"
+            ><img src="windows-10-icon.svg" alt="" class="platform-icon" />
+          </span>
 
-          <span class="game-rating">Rating</span>
+          <span class="game-rating">2.5 / 5</span>
         </div>
         <div class="game-info-bottom">
-          <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
-          <div class="button-container">
-            <button class="cart-btn">Add to cart</button>
-            <button class="buy-btn">
-              <img src="/bag.svg" alt="" class="bag-img" />
-            </button>
-          </div>
+          <span class="game-price-sale">Free</span>
+          <a href="../Authentication/login.html">
+            <div class="button-container">
+              <button class="cart-btn">Add to cart</button>
+              <button class="buy-btn">
+                <img src="/bag.svg" alt="" class="bag-img" />
+              </button></div
+          ></a>
         </div>
       </div>
     </div>
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          Dota 2
           <br />
-          PLAY ROCKET LEAGUE FOR FREE!
           <br />
-          Download and compete in the high-octane hybrid of arcade-style soccer
-          and vehicular mayhem! customize your car, hit the field, and compete
-          in one of the most critically acclaimed sports games of all time!
-          Download and take your shot! <br /><br />
-          Hit the field by yourself or with friends in 1v1, 2v2, and 3v3 Online
-          Modes, or enjoy Extra Modes like Rumble, Snow Day, or Hoops. Unlock
-          items in Rocket Pass, climb the Competitive Ranks, compete in
-          Competitive Tournaments, complete Challenges, enjoy cross-platform
-          progression and more! The field is waiting. Take your shot!
+          Dota 2 is an Action RTS game, developed by Valve Corporation. The
+          title was formally announced on October 13, 2010; and was released as
+          a Free to Play game on July 9th, 2013 for Windows, and July 18th, 2013
+          for Mac OS and Linux. It is the successor to the very popular Warcraft
+          3 mod, Defense of the Ancients, which was based on the Aeon of Strife
+          map for StarCraft.
           <br /><br />
-          New Challenges <br /><br />
-          Complete Weekly and season-long Challenges to unlock customization
-          items for free! <br /><br />
-          Tournaments <br /><br />
-          Feel the competitive energy! Join free Tournaments and compete all
-          season against teams at your Rank! Win and earn new rewards!
+          Dota 2 is an RTS-styled MOBA-type competitive team game with RPG
+          elements. Two competing teams (Radiant and Dire) consist of five
+          players each. The main objective in Dota 2 is to destroy the enemy
+          Ancient inside their stronghold. These strongholds are protected by
+          multiple towers down 3 lanes. Instead of building armies of units like
+          in classical RTS games, each player controls a single Hero, a
+          strategically-powerful unit with unique abilities and characteristics
+          which can be improved over the course of the game. Experience is
+          earned when nearby creeps and heroes die, and once collecting enough
+          experience, the hero gains a level, which increases the hero's stats,
+          and at most levels the hero gains a skill point which can be spent to
+          unlock or upgrade one of the hero's abilities. Alongside a hero's
+          fixed abilities, each hero has 6 inventory slots which can be filled
+          with Items which provide various benefits and abilities. To purchase
+          these items, Gold is gained passively over time, by killing creeps, by
+          killing enemy heroes and by destroying buildings. Dota 2 has a heavy
+          emphasis on tactics and team co-ordination, and a deep amount of
+          strategy focused on building up strength as fast as possible, optimal
+          itemization, and selecting what order to upgrade your hero's spells.
           <br /><br />
-          In-Game Events and Limited Time Modes <br /><br />
-          From Haunted Hallows to Frosty Fest, enjoy limited time events that
-          feature festive in-game items that can be unlocked by playing online!
-          Keep on the lookout for Limited Time Modes and arenas. <br /><br />
-          Cross-Platform Progression <br /><br />
-          Share your Rocket League Inventory, Competitive Rank, and Rocket Pass
-          Tier on any connected platform! <br /><br />
-          Item Shop & Blueprints <br /><br />
-          Make your car your own with nearly endless customization
-          possibilities! Get in-game items for completing challenges, browse the
-          Item Shop, or build Blueprints for premium content for your car.
         </p>
       </div>
     </div>
-       <div class="footer-color">
+    <div class="footer-color">
       <div class="main-container">
         <footer>
           <div>
@@ -140,4 +138,3 @@
     </div>
   </body>
 </html>
-
