--- a/Games/rocket-league.html
+++ b/Games/rocket-league.html
@@ -38,14 +38,16 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">Rocket League</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
-
-          <span class="game-rating">Rating</span>
+          <span class="game-creator">Epic Games</span>
+          <span class="game-platform"
+          ><img src="windows-10-icon.svg" alt="" class="platform-icon" /><img
+            src="playstation.png"
+            class="platform-icon"
+        /></span>
+          <span class="game-rating">3.0 / 5</span>
         </div>
         <div class="game-info-bottom">
-          <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
+          <span class="game-price-sale">Free</span>
           <div class="button-container">
             <button class="cart-btn">Add to cart</button>
             <button class="buy-btn">
@@ -58,7 +60,7 @@
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          Rocket League!
           <br />
           PLAY ROCKET LEAGUE FOR FREE!
           <br />
