--- a/Games/far-cry-6.html
+++ b/Games/far-cry-6.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,20 +6,19 @@
     <title>Far Cry 6</title>
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="game.css" />
-        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-        <script src="../navbar.js"></script>
-
+    <script src="../navbar.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
+          <a href="../About/Contact.html">Contact</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -30,7 +28,7 @@
     <div class="main-container game-container">
       <div class="left-half">
         <img
-          src="../Game_Images/rocket.avif"
+          src="../Game_Images/far-cry-6.jpg"
           class="game-cover"
           alt="game-cover"
         />
@@ -38,62 +36,71 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">Far Cry 6</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
+          <span class="game-creator">Ubisoft</span>
+          <span class="game-platform"
+            ><img src="windows-10-icon.svg" alt="" class="platform-icon" /><img
+              src="playstation.png"
+              class="platform-icon"
+          /></span>
 
-          <span class="game-rating">Rating</span>
+          <span class="game-rating">2.5 / 5</span>
         </div>
         <div class="game-info-bottom">
-          <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
-          <div class="button-container">
-            <button class="cart-btn">Add to cart</button>
-            <button class="buy-btn">
-              <img src="/bag.svg" alt="" class="bag-img" />
-            </button>
-          </div>
+          <span class="game-price">29.99$</span>
+
+          <span class="game-price-sale">Free*</span>
+          <a href="../Authentication/login.html">
+            <div class="button-container">
+              <button class="cart-btn">Add to cart</button>
+              <button class="buy-btn">
+                <img src="/bag.svg" alt="" class="bag-img" />
+              </button></div
+          ></a>
         </div>
       </div>
     </div>
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          FAR CRY 6 - FREE WEEKEND AVAILABLE NOW          <br />
           <br />
-          PLAY ROCKET LEAGUE FOR FREE!
-          <br />
-          Download and compete in the high-octane hybrid of arcade-style soccer
-          and vehicular mayhem! customize your car, hit the field, and compete
-          in one of the most critically acclaimed sports games of all time!
-          Download and take your shot! <br /><br />
-          Hit the field by yourself or with friends in 1v1, 2v2, and 3v3 Online
-          Modes, or enjoy Extra Modes like Rumble, Snow Day, or Hoops. Unlock
-          items in Rocket Pass, climb the Competitive Ranks, compete in
-          Competitive Tournaments, complete Challenges, enjoy cross-platform
-          progression and more! The field is waiting. Take your shot!
+          Far Cry 6 is available to play for free starting today until February
+          20 on Xbox Series X|S, Xbox One, PS5, PS4, and PC. In the game, you'll
+          step onto the tropical island Yara and take on the role of Dani Rojas,
+          who joins the guerrilla group Libertad and helps them work to
+          overthrow Yara's dictator, AntÃ³n Castillo. Dani's work will take them
+          all over the island, showing off its diverse regions as they take out
+          Castillo's army. The free weekend will give players access to all of
+          Far Cry 6's base game, including the crossover missions inspired by
+          pop culture: Rambo: All the Blood, and The Vanishing, a Stranger
+          Things mystery. If you don't want your time in Yara to end after the
+          weekend, Far Cry 6 will be on sale for up to 70% off for a limited
+          time. Purchase the game after the free weekend ends, and all your
+          progress will carry over.
+          <br><br>
+          During the free weekend, players
+          can also play Far Cry 6 in co-op, joining forces with friends to
+          liberate Yara. Everyone who plays co-op during the free weekend will
+          receive the White Lotus Sniper Rifle, and those who play co-op but
+          don't own the game will receive it in their inventory when they
+          purchase it. Far Cry 6 is also part of Ubisoft Connect's Share Play
+          program, a free new feature that allows you to share your screen and
+          controls with friends virtually. For a limited time, get the Standard,
+          Deluxe, and Gold Editions of Far Cry 6 for up to 70% off, the Game of
+          the Year Edition for up to 67% off, and save up to 60% on the Game of
+          the Year Upgrade pass and Season Pass. You can also get Far Cry 6's
+          recent expansion, Lost Between Worlds, for up to 50% off. If you miss
+          Far Cry 6's free weekend, don't worry - the game has an
+          always-available free trial that gives you access to the full game,
+          with progress limited to the first island. For more on Far Cry 6,
+          learn about the game's improved stealth, get insight on how its DLCs
+          got into the heads of Far Cry villains, and stay tuned to Ubisoft News
+          for more updates.
           <br /><br />
-          New Challenges <br /><br />
-          Complete Weekly and season-long Challenges to unlock customization
-          items for free! <br /><br />
-          Tournaments <br /><br />
-          Feel the competitive energy! Join free Tournaments and compete all
-          season against teams at your Rank! Win and earn new rewards!
-          <br /><br />
-          In-Game Events and Limited Time Modes <br /><br />
-          From Haunted Hallows to Frosty Fest, enjoy limited time events that
-          feature festive in-game items that can be unlocked by playing online!
-          Keep on the lookout for Limited Time Modes and arenas. <br /><br />
-          Cross-Platform Progression <br /><br />
-          Share your Rocket League Inventory, Competitive Rank, and Rocket Pass
-          Tier on any connected platform! <br /><br />
-          Item Shop & Blueprints <br /><br />
-          Make your car your own with nearly endless customization
-          possibilities! Get in-game items for completing challenges, browse the
-          Item Shop, or build Blueprints for premium content for your car.
         </p>
       </div>
     </div>
-       <div class="footer-color">
+    <div class="footer-color">
       <div class="main-container">
         <footer>
           <div>
@@ -140,4 +147,3 @@
     </div>
   </body>
 </html>
-
