--- a/Games/fifa-2023.html
+++ b/Games/fifa-2023.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,20 +6,19 @@
     <title>FIFA 2023</title>
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="game.css" />
-        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-        <script src="../navbar.js"></script>
-
+    <script src="../navbar.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
+          <a href="../About/Contact.html">Contact</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -30,7 +28,7 @@
     <div class="main-container game-container">
       <div class="left-half">
         <img
-          src="../Game_Images/rocket.avif"
+          src="../Game_Images/fifa23.avif"
           class="game-cover"
           alt="game-cover"
         />
@@ -38,62 +36,99 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">FIFA 2023</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
+          <span class="game-creator">Electronic Arts EA</span>
+          <span class="game-platform"
+            ><img src="windows-10-icon.svg" alt="" class="platform-icon" /><img
+              src="playstation.png"
+              class="platform-icon"
+          /></span>
 
-          <span class="game-rating">Rating</span>
+          <span class="game-rating">4.5 / 5</span>
         </div>
         <div class="game-info-bottom">
-          <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
-          <div class="button-container">
-            <button class="cart-btn">Add to cart</button>
-            <button class="buy-btn">
-              <img src="/bag.svg" alt="" class="bag-img" />
-            </button>
-          </div>
+          <span class="game-price-sale">89.99$</span>
+          <a href="../Authentication/login.html">
+            <div class="button-container">
+              <button class="cart-btn">Add to cart</button>
+              <button class="buy-btn">
+                <img src="/bag.svg" alt="" class="bag-img" />
+              </button></div
+          ></a>
         </div>
       </div>
     </div>
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          FIFA 23
           <br />
-          PLAY ROCKET LEAGUE FOR FREE!
           <br />
-          Download and compete in the high-octane hybrid of arcade-style soccer
-          and vehicular mayhem! customize your car, hit the field, and compete
-          in one of the most critically acclaimed sports games of all time!
-          Download and take your shot! <br /><br />
-          Hit the field by yourself or with friends in 1v1, 2v2, and 3v3 Online
-          Modes, or enjoy Extra Modes like Rumble, Snow Day, or Hoops. Unlock
-          items in Rocket Pass, climb the Competitive Ranks, compete in
-          Competitive Tournaments, complete Challenges, enjoy cross-platform
-          progression and more! The field is waiting. Take your shot!
-          <br /><br />
-          New Challenges <br /><br />
-          Complete Weekly and season-long Challenges to unlock customization
-          items for free! <br /><br />
-          Tournaments <br /><br />
-          Feel the competitive energy! Join free Tournaments and compete all
-          season against teams at your Rank! Win and earn new rewards!
-          <br /><br />
-          In-Game Events and Limited Time Modes <br /><br />
-          From Haunted Hallows to Frosty Fest, enjoy limited time events that
-          feature festive in-game items that can be unlocked by playing online!
-          Keep on the lookout for Limited Time Modes and arenas. <br /><br />
-          Cross-Platform Progression <br /><br />
-          Share your Rocket League Inventory, Competitive Rank, and Rocket Pass
-          Tier on any connected platform! <br /><br />
-          Item Shop & Blueprints <br /><br />
-          Make your car your own with nearly endless customization
-          possibilities! Get in-game items for completing challenges, browse the
-          Item Shop, or build Blueprints for premium content for your car.
+          FIFA 23 is a football video game published by EA Sports. It is the
+          30th installment in the FIFA series that is developed by EA Sports,
+          the final installment under the FIFA banner, and released worldwide on
+          30 September 2022 for Nintendo Switch, PlayStation 4, PlayStation 5,
+          Windows, Xbox One and Xbox Series X/S. Kylian MbappÃ© and Sam Kerr
+          are the cover athletes for the standard and legacy editions. Listed in
+          Guinness World Records as the best-selling sports video game franchise
+          in the world, the game is the final under the 29-year partnership
+          between EA and FIFA. Future football games by EA are named under the
+          banner of EA Sports FC (alternatively just "EAFC").<br /><br />
+          HyperMotion2 and Technical Dribbling<br /><br />
+
+          The game features what's being dubbed as "HyperMotion2", a system of
+          match capture with machine learning from real life football matches to
+          create over 6,000 in-game animations. "Technical Dribbling" uses what
+          is being called the "Active Touch" system to improve the footballer's
+          path to the ball and improve a player's turning and dribbling with
+          more responsiveness. Both systems are exclusive to
+          current-generation versions (i.e. PS5, Xbox Series X/S and PC). The
+          machine learning algorithms used in HyperMotion2 are based on deep
+          learning neural networks, which are designed to simulate the behavior
+          of the human brain. These neural networks consist of layers of
+          interconnected nodes that process and analyze data, allowing the
+          system to identify patterns and make predictions based on past
+          experience. To train the machine learning algorithms used in
+          HyperMotion2, EA Sports used a large dataset of football matches
+          captured with advanced motion-capture technology. The dataset includes
+          thousands of hours of footage, which was carefully analyzed and
+          labeled by a team of experts to ensure the accuracy of the data. A
+          technique called backpropagation was used by EA Sports.
+          Backpropagation is a technique used to adjust the parameters of a
+          neural network to minimize the difference between the network's
+          predictions and the actual output. In the case of HyperMotion2,
+          backpropagation is used to adjust the parameters of the neural network
+          to ensure that the in-game animations accurately replicate the
+          movements of real-life players. The machine learning algorithms used
+          in HyperMotion2 are able to identify patterns in the data and use
+          these patterns to create new animations that accurately replicate the
+          movements of real-life players. The system is able to generate over
+          6,000 unique animations, each with its own set of variables and
+          parameters that determine how the animation will be executed
+          in-game. <br /><br />
+          World Cup game modes<br /><br />
+          FIFA 23 features the men's World Cup game mode and the women's World
+          Cup game mode, replicating the 2022 FIFA World Cup and the 2023 FIFA
+          Women's World Cup. This is the only title in the series to feature
+          both World Cups as special modes. The 2022 FIFA World Cup mode was
+          released on 9 November for all platforms except for the Nintendo
+          Switch Legacy Edition. The mode contains only two out of eight
+          stadiums: Al Bayt and Lusail Iconic Stadium. The mode also contains
+          each of the 32 teams that qualified for the 2022 tournament, along
+          with fifteen other national teams that are featured in the game and
+          did not qualify: Austria, China, Czech Republic, Finland, Hungary,
+          Iceland, Italy, New Zealand, Northern Ireland, Norway, Republic of
+          Ireland, Romania, Scotland, Sweden, and Ukraine. The World Cup
+          mode in FIFA 23 is the last World Cup mode since the new generation of
+          FIFA games will go under the name of EA Sports FC; therefore will not
+          get licensing from FIFA. On 19 June 2023, it was announced that the
+          2023 FIFA Women's World Cup mode has been released around the end of
+          June 2023. The update was released on 27 June 2023,
+          replicating the 2023 FIFA Women's World Cup tournament and featuring
+          the 32 qualified teams. <br /><br />
         </p>
       </div>
     </div>
-       <div class="footer-color">
+    <div class="footer-color">
       <div class="main-container">
         <footer>
           <div>
@@ -140,4 +175,3 @@
     </div>
   </body>
 </html>
-
