--- a/Games/gta-v.html
+++ b/Games/gta-v.html
@@ -7,20 +7,19 @@
     <title>GTA V</title>
     <link rel="stylesheet" href="../global.css" />
     <link rel="stylesheet" href="game.css" />
-        <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
-        <script src="../navbar.js"></script>
-
+    <script src="../navbar.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="index.html" class="active">Home</a>
+          <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="#">Contact</a>
-          <a href="#">About</a>
+          <a href="../About/Contact.html">Contact</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -30,7 +29,7 @@
     <div class="main-container game-container">
       <div class="left-half">
         <img
-          src="../Game_Images/rocket.avif"
+          src="../Game_Images/gtaV.avif"
           class="game-cover"
           alt="game-cover"
         />
@@ -38,62 +37,60 @@
       <div class="right-half">
         <div class="game-info-top">
           <span class="game-title">GTA V</span>
-          <span class="game-creator">Game creator</span>
-          <span class="game-platform">Platform</span>
+          <span class="game-creator">Rockstar Games</span>
+          <span class="game-platform"
+            ><img src="windows-10-icon.svg" alt="" class="platform-icon" /><img
+              src="playstation.png"
+              class="platform-icon"
+          /></span>
 
-          <span class="game-rating">Rating</span>
+          <span class="game-rating">5.0 / 5</span>
         </div>
         <div class="game-info-bottom">
-          <span class="game-price">99.99$</span>
-          <span class="game-price-sale">49.99&</span>
-          <div class="button-container">
+          <span class="game-price">59.99$</span>
+
+          <span class="game-price-sale">29.99$</span>
+         <a href="../Authentication/login.html"> <div class="button-container">
             <button class="cart-btn">Add to cart</button>
             <button class="buy-btn">
               <img src="/bag.svg" alt="" class="bag-img" />
             </button>
-          </div>
+          </div></a>
         </div>
       </div>
     </div>
     <div class="main-container">
       <div class="game-long-description">
         <p>
-          Rocket League®
+          GRAND THEFT AUTO V
           <br />
-          PLAY ROCKET LEAGUE FOR FREE!
           <br />
-          Download and compete in the high-octane hybrid of arcade-style soccer
-          and vehicular mayhem! customize your car, hit the field, and compete
-          in one of the most critically acclaimed sports games of all time!
-          Download and take your shot! <br /><br />
-          Hit the field by yourself or with friends in 1v1, 2v2, and 3v3 Online
-          Modes, or enjoy Extra Modes like Rumble, Snow Day, or Hoops. Unlock
-          items in Rocket Pass, climb the Competitive Ranks, compete in
-          Competitive Tournaments, complete Challenges, enjoy cross-platform
-          progression and more! The field is waiting. Take your shot!
-          <br /><br />
-          New Challenges <br /><br />
-          Complete Weekly and season-long Challenges to unlock customization
-          items for free! <br /><br />
-          Tournaments <br /><br />
-          Feel the competitive energy! Join free Tournaments and compete all
-          season against teams at your Rank! Win and earn new rewards!
-          <br /><br />
-          In-Game Events and Limited Time Modes <br /><br />
-          From Haunted Hallows to Frosty Fest, enjoy limited time events that
-          feature festive in-game items that can be unlocked by playing online!
-          Keep on the lookout for Limited Time Modes and arenas. <br /><br />
-          Cross-Platform Progression <br /><br />
-          Share your Rocket League Inventory, Competitive Rank, and Rocket Pass
-          Tier on any connected platform! <br /><br />
-          Item Shop & Blueprints <br /><br />
-          Make your car your own with nearly endless customization
-          possibilities! Get in-game items for completing challenges, browse the
-          Item Shop, or build Blueprints for premium content for your car.
+          When a young street hustler, a retired bank robber and a terrifying psychopath land themselves in trouble,<br>
+          they must pull off a series of dangerous heists to survive in a city in which they can trust nobody, least of all each other.<br>
+          <br>
+          GRAND THEFT AUTO ONLINE<br>
+          Discover an ever-evolving world of choices and ways to play as you climb the criminal ranks of Los Santos and Blaine County<br>
+          in the ultimate shared Online experience.<br>
+          <br>
+          THE CRIMINAL ENTERPRISE STARTER PACK<br>
+          The Criminal Enterprise Starter Pack is the fastest way for new GTA Online players to jumpstart their criminal empires<br>
+          with the most exciting and popular content plus $1,000,000 bonus cash to spend in GTA Online - all content valued at over GTA $10,000,000 if purchased separately.<br>
+          <br>
+          LAUNCH YOUR CRIMINAL EMPIRE<br>
+          Launch business ventures from your Maze Bank West Executive Office, research powerful weapons technology from your underground Gunrunning Bunker<br>
+          and use your Counterfeit Cash Factory to start a lucrative counterfeiting operation.<br>
+          <br>
+          A FLEET OF POWERFUL VEHICLES<br>
+          Tear through the streets with a range of 10 high-performance vehicles including a Supercar, Motorcycles, the weaponized Dune FAV,<br>
+          a Helicopter, a Rally Car and more. You'll also get properties including a 10 car garage to store your growing fleet.<br>
+          <br>
+          WEAPONS, CLOTHING & TATTOOS<br>
+          You'll also get access to the Compact Grenade Launcher, Marksman Rifle and Compact Rifle along with Stunt Racing Outfits, Biker Tattoos and more.
+          
         </p>
       </div>
     </div>
-       <div class="footer-color">
+    <div class="footer-color">
       <div class="main-container">
         <footer>
           <div>
@@ -140,4 +137,5 @@
     </div>
   </body>
 </html>
+
 
