--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
         <div class="section-title title">
           <p>Latest</p>
           <div>
-            <button class="more-button">
-              More <img src="arrow.svg" class="arrow" />
-            </button>
+            <a href="/Games/game.html">
+
+              <button class="more-button">
+                More <img src="arrow.svg" class="arrow" />
+              </button>
+              </a>
           </div>
         </div>
         <div class="latest-container">
@@ -196,9 +199,12 @@
         <div class="section-title title">
           <p>News</p>
           <div>
-            <button class="more-button">
-              More <img src="arrow.svg" class="arrow" />
-            </button>
+            <a href="/News/news.html">
+
+              <button class="more-button">
+                More <img src="arrow.svg" class="arrow" />
+              </button>
+              </a>
           </div>
         </div>
         <div class="news-container">
@@ -253,9 +259,12 @@
         <div class="section-title title">
           <p>For Sale</p>
           <div>
-            <button class="more-button">
-              More <img src="arrow.svg" class="arrow" />
-            </button>
+            <a href="/Games/game.html">
+
+              <button class="more-button">
+                More <img src="arrow.svg" class="arrow" />
+              </button>
+              </a>
           </div>
         </div>
         <div class="latest-container">
@@ -351,9 +360,12 @@
         <div class="section-title title">
           <p>Recomended</p>
           <div>
+            <a href="/Games/game.html">
+
             <button class="more-button">
               More <img src="arrow.svg" class="arrow" />
             </button>
+            </a>
           </div>
         </div>
         <section id="recommended-section"> </section>
@@ -364,9 +376,10 @@
       <div class="section-title title">
         <p>Free</p>
         <div>
+          <a href="/Games/game.html">
           <button class="more-button">
             More <img src="arrow.svg" class="arrow" />
-          </button>
+          </button></a>
         </div>
       </div>
       <section id="free-section"></section>
