--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a href="index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
           <a href="/ContactUs/contactUs.html">Contact</a>
-          <a href="#">About</a>
+          <a href="/About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="menu.svg" class="menu-icon" /></i>
           </a>
@@ -113,7 +113,7 @@
         <div class="latest-container">
           <div class="game-card">
             <div class="image-container">
-              <a href="/Games/fifa24.html">
+              <a href="/Games/fifa-2024.html">
                 <img
                   src="Game_Images/fc_24.avif"
                   alt="Game Image"
@@ -128,7 +128,7 @@
                 <span class="game-description">Play football online</span>
               </div>
               <span class="price"> 3.99$/Monthly*</span
-              ><a href="/Games/fifa24.html">
+              ><a href="/Games/fifa-2024.html">
                 <div class="button-container">
                   <button class="read-more-btn">Read more</button>
                   <button class="buy-btn">
@@ -153,9 +153,9 @@
                 <span class="game-name">Valorant</span>
                 <span class="game-description">5v5 Online shooter</span>
               </div>
-              <span class="price">Free</span
-              ><a href="/Games/fifa24.html">
-                <div class="button-container">
+              <span class="price">Free</span>
+                <a href="/Games/valorant.html">
+                  <div class="button-container">
                   <button class="read-more-btn">Read more</button>
                   <button class="buy-btn">
                     <img src="/bag.svg" alt="" class="bag-img" />
@@ -167,7 +167,7 @@
 
           <div class="game-card">
             <div class="image-container">
-              <a href="/Games/cyberpunk.html">
+              <a href="/Games/cyberpunk-2077.html">
                 <img
                   src="Game_Images/cyberpunk.avif"
                   alt="Game Image"
@@ -181,7 +181,7 @@
                 <span class="game-description">Challange the world</span>
               </div>
               <span class="price"> 89.99$</span
-              ><a href="/Games/fifa24.html">
+              ><a href="/Games/cyberpunk-2077.html">
                 <div class="button-container">
                   <button class="read-more-btn">Read more</button>
                   <button class="buy-btn">
@@ -297,7 +297,7 @@
           </div>
           <div class="game-card">
             <div class="image-container">
-              <a href="/Games/among_us.html">
+              <a href="/Games/among-us.html">
                 <img
                   src="Game_Images/among_us.avif"
                   alt="Game Image"
@@ -312,7 +312,7 @@
               </div>
               <span class="price-for-sale"> 9.99$</span>
               <span class="price"> 3.99$</span
-              ><a href="/Games/among_us.html">
+              ><a href="/Games/among-us.html">
                 <div class="button-container">
                   <button class="read-more-btn">Read more</button>
                   <button class="buy-btn">
@@ -325,7 +325,7 @@
 
           <div class="game-card">
             <div class="image-container">
-              <a href="/Games/watch_dogs.html">
+              <a href="/Games/watch-dogs-2.html">
                 <img
                   src="Game_Images/watch_dogs.avif"
                   alt="Game Image"
@@ -342,7 +342,7 @@
               </div>
               <span class="price-for-sale"> 19.99$</span>
               <span class="price"> 10.99$</span>
-              <a href="/Games/watch_dogs.html">
+              <a href="/Games/watch-dogs-2.html">
                 <div class="button-container">
                   <button class="read-more-btn">Read more</button>
                   <button class="buy-btn">
