Fixed navbar URL connections

--- a/ContactUs/contactUs.html
+++ b/ContactUs/contactUs.html
@@ -17,9 +17,9 @@
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
           <a href="../index.html">Home</a>
-          <a href="news.html">News</a>
+          <a href="../News/news.html">News</a>
           <a href="../ContactUs/contactUs.html" class="active">Contact</a>
-          <a href="../About/about">About</a>
+          <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
@@ -72,25 +72,25 @@
           </div>
           <div class="footer-links">
             <div class="hebele">
-              <a href="home.html">Home</a>
+              <a href="../index.html">Home</a>
             </div>
             <div class="hebele">
-              <a href="news.html">News</a>
+              <a href="../News/news.html">News</a>
             </div>
             <div class="hebele">
-              <a href="contact.html">Contact</a>
+              <a href="../ContactUs/contactUs.html">Contact</a>
             </div>
             <div class="hebele">
-              <a href="about.html">About</a>
+              <a href="../About/About.html">About</a>
             </div>
             <div class="hebele">
-              <a href="latest.html">Latest</a>
+              <a href="../Games/game.html">Latest</a>
             </div>
             <div class="hebele">
-              <a href="sale.html">Sale</a>
+              <a href="../Games/game.html">Sale</a>
             </div>
             <div class="hebele">
-              <a href="recommended.html">Recommended</a>
+              <a href="../Games/game.html">Recommended</a>
             </div>
           </div>
           <div class="newsletter">
