--- a/Games/farming-simulator-22.html
+++ b/Games/farming-simulator-22.html
@@ -18,7 +18,7 @@
           <img src="../logo.png" alt="" class="navlogo" />
           <a href="../index.html" class="active">Home</a>
           <a href="/News/news.html">News</a>
-          <a href="../About/Contact.html">Contact</a>
+          <a href="../ContactUs/ContactUs.html">Contact</a>
           <a href="../About/About.html">About</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
