--- a/Games/game.html
+++ b/Games/game.html
@@ -162,29 +162,40 @@
       </a>
     </div>
   </div>
-
-
-
 </div>
 </div>
 <div class="footer-color">
   <div class="main-container">
     <footer>
       <div>
-        <img src="logo.png" alt="" />
+        <img src="/logo.png" alt="" />
         <h1>Online Game's Shop</h1>
         <h3>Rrezon & Enes Solutions TM</h3>
         <h4>Prizren 20000</h4>
         <h4>Rruga Tirana, B11</h4>
       </div>
       <div class="footer-links">
-        <a href="home.html">Home</a>
-        <a href="news.html">News</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About</a>
-        <a href="latest.html">Latest</a>
-        <a href="sale.html">Sale</a>
-        <a href="recommended.html">Recommended</a>
+        <div class="footer-link">
+          <a href="home.html">Home</a>
+        </div>
+        <div class="footer-link">
+          <a href="news.html">News</a>
+        </div>
+        <div class="footer-link">
+          <a href="contact.html">Contact</a>
+        </div>
+        <div class="footer-link">
+          <a href="about.html">About</a>
+        </div>
+        <div class="footer-link">
+          <a href="latest.html">Latest</a>
+        </div>
+        <div class="footer-link">
+          <a href="sale.html">Sale</a>
+        </div>
+        <div class="footer-link">
+          <a href="recommended.html">Recommended</a>
+        </div>
       </div>
       <div class="newsletter">
         <form action="" method="post">
