--- a/index.html
+++ b/index.html
@@ -502,25 +502,25 @@
             <h4>Rruga Tirana, B11</h4>
           </div>
           <div class="footer-links">
-            <div class="hebele">
+            <div class="footer-link">
               <a href="home.html">Home</a>
             </div>
-            <div class="hebele">
-              <a href="news.html">News</a>
+            <div class="footer-link">
+              <a href="/News/news.html">News</a>
             </div>
-            <div class="hebele">
-              <a href="contact.html">Contact</a>
+            <div class="footer-link">
+              <a href="ContactUs/contactUs.html">Contact</a>
             </div>
-            <div class="hebele">
-              <a href="about.html">About</a>
+            <div class="footer-link">
+              <a href="About/About.html">About</a>
             </div>
-            <div class="hebele">
+            <div class="footer-link">
               <a href="latest.html">Latest</a>
             </div>
-            <div class="hebele">
+            <div class="footer-link">
               <a href="sale.html">Sale</a>
             </div>
-            <div class="hebele">
+            <div class="footer-link">
               <a href="recommended.html">Recommended</a>
             </div>
           </div>
