Fixed navbar to add a link to games page

--- a/Games/game.html
+++ b/Games/game.html
@@ -13,10 +13,12 @@
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="../index.html" class="active">Home</a>
+          <a href="../index.html" >Home</a>
           <a href="../News/news.html">News</a>
           <a href="../ContactUs/contactUs.html">Contact</a>
           <a href="../About/About.html">About</a>
+          <a href="../Games/game.html" class="active">Games</a>
+
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
