--- a/About/About.html
+++ b/About/About.html
@@ -18,6 +18,8 @@
             <a href="/News/news.html">News</a>
             <a href="/ContactUs/contactUs.html">Contact</a>
             <a href="/About/About.html" class="active">About</a>
+            <a href="../Games/game.html">Games</a>
+
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
             </a>
