--- a/ContactUs/contactUs.html
+++ b/ContactUs/contactUs.html
@@ -20,6 +20,8 @@
           <a href="../News/news.html">News</a>
           <a href="../ContactUs/contactUs.html" class="active">Contact</a>
           <a href="../About/About.html">About</a>
+          <a href="../Games/game.html">Games</a>
+
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
