--- a/Games/far-cry-6.html
+++ b/Games/far-cry-6.html
@@ -15,10 +15,12 @@
       <div class="main-container">
         <div class="topnav" id="myTopnav">
           <img src="../logo.png" alt="" class="navlogo" />
-          <a href="../index.html" class="active">Home</a>
+          <a href="../index.html" >Home</a>
           <a href="/News/news.html">News</a>
           <a href="../ContactUs/ContactUs.html">Contact</a>
           <a href="../About/About.html">About</a>
+          <a href="../Games/game.html" class="active">Games</a>
+
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="../menu.svg" class="menu-icon" /></i>
           </a>
