--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           <a href="/News/news.html">News</a>
           <a href="/ContactUs/contactUs.html">Contact</a>
           <a href="/About/About.html">About</a>
+          <a href="/Games/game.html">Games</a>
+
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="menu"><img src="menu.svg" class="menu-icon" /></i>
           </a>
@@ -515,13 +517,13 @@
               <a href="About/About.html">About</a>
             </div>
             <div class="footer-link">
-              <a href="latest.html">Latest</a>
+              <a href="/Games/game.html">Latest</a>
             </div>
             <div class="footer-link">
-              <a href="sale.html">Sale</a>
+              <a href="/Games/game.html">Sale</a>
             </div>
             <div class="footer-link">
-              <a href="recommended.html">Recommended</a>
+              <a href="/Games/game.html">Recommended</a>
             </div>
           </div>
           <div class="newsletter">
