Games Validation Update

--- a/About/About.html
+++ b/About/About.html
@@ -48,7 +48,7 @@
                 Enes Paqarizi
             </span> 
             <span><img src="ubt-logo.png" alt="uni" class="uni-logo"></span>
-            <span>Computer Games Developer</span>
+            <span>Unreal Engine & C++ Developer</span>
             <span>LinkedIn: <a href="https://www.linkedin.com/in/enespa%C3%A7arizi/">Enes</a></span>
             <span>GitHub: <a href="https://github.com/YyepPo">YyepPo</a></span>
         </div>
@@ -95,7 +95,7 @@
                 <div class="input-container">
                   <input
                     type="email"
-                    id="email"
+                    id="email-last"
                     name="email"
                     required
                     class="email-input"
@@ -104,7 +104,7 @@
                     type="submit"
                     class="subscribe-button"
                     form="my-form"
-                    onclick="alert('You succesfully subscribed to our newsletter')"
+                    onclick="subToNewsLetter()"
                   >
                     Subscribe
                   </button>
@@ -114,4 +114,7 @@
           </footer>
         </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
