--- a/Games/far-cry-6.html
+++ b/Games/far-cry-6.html
@@ -128,7 +128,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -137,7 +137,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -148,4 +148,5 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
