--- a/Games/fifa-2024.html
+++ b/Games/fifa-2024.html
@@ -166,7 +166,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -177,6 +177,9 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
 
 
