--- a/Games/alan-awake-2.html
+++ b/Games/alan-awake-2.html
@@ -144,7 +144,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -153,7 +153,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
