--- a/Games/among-us.html
+++ b/Games/among-us.html
@@ -97,7 +97,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -106,7 +106,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -117,6 +117,9 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
 
 
