--- a/Games/call-of-duty-modern-warfare.html
+++ b/Games/call-of-duty-modern-warfare.html
@@ -100,7 +100,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -109,7 +109,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -120,6 +120,8 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
 </html>
 
 
