--- a/Games/cities-skylines.html
+++ b/Games/cities-skylines.html
@@ -125,7 +125,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -134,7 +134,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -145,4 +145,7 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
