--- a/Games/counter-strike-2.html
+++ b/Games/counter-strike-2.html
@@ -133,7 +133,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -142,7 +142,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -153,4 +153,5 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
