--- a/Games/cyberpunk-2077.html
+++ b/Games/cyberpunk-2077.html
@@ -102,7 +102,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -122,4 +122,7 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
