--- a/Games/dota-2.html
+++ b/Games/dota-2.html
@@ -119,7 +119,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -128,7 +128,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -139,4 +139,7 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+  
 </html>
