--- a/Games/farming-simulator-22.html
+++ b/Games/farming-simulator-22.html
@@ -101,7 +101,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -110,7 +110,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -121,6 +121,7 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
 
 
