--- a/Games/fifa-2023.html
+++ b/Games/fifa-2023.html
@@ -156,7 +156,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -165,7 +165,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -176,4 +176,7 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
+
 </html>
