--- a/Games/fortnite.html
+++ b/Games/fortnite.html
@@ -123,7 +123,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -132,7 +132,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -143,4 +143,6 @@
       </div>
     </div>
   </body>
+
+  <script src="/global.js"></script>
 </html>
