--- a/Games/forza-horizon-4.html
+++ b/Games/forza-horizon-4.html
@@ -106,7 +106,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -115,7 +115,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -126,4 +126,5 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
