--- a/Games/game.html
+++ b/Games/game.html
@@ -75,7 +75,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -84,7 +84,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -94,8 +94,11 @@
         </footer>
       </div>
     </div>
-    <script src="Games.js"></script>
-    <script src="../navbar.js"></script>
-
+    
   </body>
+
+  <script src="Games.js"></script>
+  <script src="../navbar.js"></script>
+  <script src="/global.js"></script>
+
 </html>
