--- a/Games/genshin-impact.html
+++ b/Games/genshin-impact.html
@@ -109,7 +109,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -118,7 +118,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -129,4 +129,5 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
