--- a/Games/gta-v.html
+++ b/Games/gta-v.html
@@ -118,7 +118,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -127,7 +127,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -138,6 +138,7 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
 
 
