--- a/Games/valorant.html
+++ b/Games/valorant.html
@@ -113,7 +113,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -122,7 +122,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -133,6 +133,7 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
 
 
