--- a/Games/watch-dogs-2.html
+++ b/Games/watch-dogs-2.html
@@ -105,7 +105,7 @@
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -114,7 +114,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -125,6 +125,7 @@
       </div>
     </div>
   </body>
+  <script src="/global.js"></script>
 </html>
 
 
