--- a/index.html
+++ b/index.html
@@ -488,14 +488,14 @@
               <a href="/Games/game.html">Recommended</a>
             </div>
           </div>
-          <div class="newsletter">
+          <div class="newsletter" id="newsletter">
             <form action="" method="post">
               <h1>Subscribe to our newsletter</h1>
               <label for="email">Email</label>
               <div class="input-container">
                 <input
                   type="email"
-                  id="email"
+                  id="email-last"
                   name="email"
                   required
                   class="email-input"
@@ -504,7 +504,7 @@
                   type="submit"
                   class="subscribe-button"
                   form="my-form"
-                  onclick="alert('You succesfully subscribed to our newsletter')"
+                  onclick="subToNewsLetter()"
                 >
                   Subscribe
                 </button>
@@ -515,8 +515,9 @@
       </div>
     </div>
 
-    <script src="index.js"></script>
-    
   </body>
+  
+  <script src="index.js"></script>
+  <script src="global.js"></script>
 
 </html>
